[package]
name = "aptos-faucet-entity"
description = "Entities for the DB-based Checker for the Aptos faucet"
version = "2.0.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
path = "src/mod.rs"

[dependencies]
sea-orm = { workspace = true }
