[package]
name = "aptos-faucet-migration"
description = "Migrations for the DB-based Checker for the Aptos faucet"
version = "2.0.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "0.11.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
